# welp-app

./: .gitignore  25_TAILWIND.mdc  70_TAILWIND_4_THEMES.md  FLUJO_DE_TICKETS.md  FLUJO_GRAFICADO.md  LICENSE  PAYFLOW.md  README.md  TICKET_FLOW.md  TICKET_FLOW_DESK.md  TICKET_FLOW_PAYFLOW.md  apprunner.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.mjs  vite.config.mjs.timestamp-1750679006425-87de45976bcf5.mjs
.cursor/rules/: 00_CHAT_BEHAVIOR.mdc  01_PROHIBITIONS.mdc  10_DJANGO_CORE.mdc  20_FRONTEND_STACK.mdc  (+18 more)
.trae/: TODO.md  trae.config.md
api/: tests.py  views.py
core/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
frontend/: animations.css  base.css  components.css  fonts.css  main.css  main.js  navbar.css  styles.css  variables.css
pay_flow/: apps.py  urls.py  views.py
project/: settings.py  urls.py  wsgi.py
scripts/: build-for-production.sh  dev.ps1  dev.sh  dev2.ps1  init_app.py  init_db.py  init_db.yaml  init_payflow.py  init_payflow.yaml  init_payflow_users.py  init_users.py  passgen.py  payflow_06.yaml  payflow_08.yaml  payflow_users.yaml  sample_payflow_users.md  seed_payflow.py  start.sh  update_supervisors.py
templates/: base.html  navbar.html
tests/: test_db.py  test_ping_secret.py  test_s3.py  test_timezone_config.py
welp_desk/: admin.py  apps.py  constants.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
welp_pay/: apps.py  urls.py  views.py
welp_payflow/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  utils.py  views.py
(+207 files in other folders)
